--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "velocityjs": "*",
     "connect-mongo": "*",
     "connect-flash": "*",
+    "nodemailer": "*",
     "eventproxy": "*"
   }
 }
