--- a/android/hyx/pom.xml
+++ b/android/hyx/pom.xml
@@ -8,7 +8,11 @@
 
 
 	<dependencies>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.9</version>
+		</dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
