--- a/android/hyx/pom.xml
+++ b/android/hyx/pom.xml
@@ -60,5 +60,11 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.6.7</version>
+		</dependency>
 	</dependencies>
 </project>
