--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ web/public/asset/css/default.css
 web/public/asset/css/olx/olx.css
 android/hyx/target/
 android/hyx/gen/
+web/public/user/register.css
