--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,5 @@ web/public/asset/css/olx/olx.css
 android/hyx/target/
 android/hyx/gen/
 web/public/user/register.css
+web/public/user/regFrm.min.js
+web/public/user/register.min.js
