--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ android/hyx/gen/
 web/public/user/register.css
 web/public/user/regFrm.min.js
 web/public/user/register.min.js
+web/public/user/login.css
