--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ web/public/user/register.css
 web/public/user/regFrm.min.js
 web/public/user/register.min.js
 web/public/user/login.css
+web/public/user/sendEmail_success.css
