--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,4 @@ web/public/user/regFrm.min.js
 web/public/user/register.min.js
 web/public/user/login.css
 web/public/user/sendEmail_success.css
+web/public/cdn/
