--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ web/public/user/register.min.js
 web/public/user/login.css
 web/public/user/sendEmail_success.css
 web/public/cdn/
+web/node_modules/
