--- a/blog/package.json
+++ b/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "foreworld",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,17 @@
   },
   "dependencies": {
     "express": "3.5.0",
-    "ejs": "*"
+    "ejs": "*",
+    "mysql": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "velocityjs": "*",
+    "connect-mongo": "*",
+    "connect-flash": "*",
+    "nodemailer": "*",
+    "node-uuid": "*",
+    "async": "*",
+    "log4js": "*",
+    "eventproxy": "*"
   }
 }
