--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,4 @@ web/public/user/sendEmail_success.css
 web/public/cdn/
 web/node_modules/
 blog/node_modules/
+blog/public/assets/css/olx/olx.css
