--- a/.gitignore
+++ b/.gitignore
@@ -227,4 +227,5 @@ web/node_modules/
 blog/node_modules/
 blog/public/assets/css/olx/olx.css
 blog/public/user/css/*.css
+blog/public/site/css/*.css
 blog/views/pagelet/html/*.html
