--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "nana",
 	"version": "0.1.0",
+	"author": "3203317@qq.com",
 	"devDependencies": {
 		"grunt": "~0.4.5",
 		"grunt-contrib-jshint": "~0.10.0",
