--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "nana",
 	"version": "0.1.0",
-	"author": "3203317@qq.com",
+	"author": {
+		"email": "3203317@qq.com"
+	},
 	"devDependencies": {
 		"grunt": "~0.4.5",
 		"grunt-contrib-jshint": "~0.10.0",
 		"grunt-contrib-nodeunit": "~0.4.1",
-		"grunt-contrib-uglify": "~0.5.0"
+		"grunt-contrib-uglify": "~0.5.0",
+		"grunt-contrib-htmlmin": "*"
 	}
 }
