--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -10,6 +10,8 @@
 		"grunt-contrib-nodeunit": "~0.4.1",
 		"grunt-contrib-uglify": "~0.5.0",
 		"grunt-contrib-htmlmin": "*",
+		"grunt-contrib-imagemin": "*",
+		"grunt-contrib-clean": "*",
 		"grunt-contrib-cssmin": "*"
 	}
 }
