--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -12,6 +12,7 @@
 		"grunt-contrib-htmlmin": "*",
 		"grunt-contrib-imagemin": "*",
 		"grunt-contrib-clean": "*",
+		"grunt-contrib-copy": "*",
 		"grunt-contrib-cssmin": "*"
 	}
 }
