--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -13,6 +13,7 @@
 		"grunt-contrib-imagemin": "*",
 		"grunt-contrib-clean": "*",
 		"grunt-contrib-copy": "*",
+		"grunt-contrib-less": "*",
 		"grunt-contrib-cssmin": "*"
 	}
 }
