--- a/.gitignore
+++ b/.gitignore
@@ -229,7 +229,7 @@ blog/public/assets/css/olx/olx.css
 blog/public/user/css/*.css
 blog/public/site/css/*.css
 blog/public/**/*.css
-blog/views/pagelet/html/*.html
+#blog/views/pagelet/html/*.html
 grunt-blog/node_modules/
 grunt-blog/src/
 grunt-blog/build/
