--- a/asset/nginx.conf
+++ b/asset/nginx.conf
@@ -41,7 +41,7 @@ http {
     server {
         listen       80 default;
 	server_name  _;
-       	server_name  www.foreworld.net foreworld.net;
+	server_name  foreworld.net;
 
 	#rewrite ^(.*) http://www.foreworld.net permanent;
 
@@ -50,6 +50,10 @@ http {
 		return 400;
 	}
 	#...
+
+	if ($host != 'www.foreworld.net') {
+                rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
+        }
 
         #charset koi8-r;
 
