--- a/grunt-blog/package.json
+++ b/grunt-blog/package.json
@@ -9,11 +9,11 @@
 		"grunt-contrib-jshint": "~0.10.0",
 		"grunt-contrib-nodeunit": "~0.4.1",
 		"grunt-contrib-uglify": "~0.5.0",
-		"grunt-contrib-htmlmin": "*",
-		"grunt-contrib-imagemin": "*",
-		"grunt-contrib-clean": "*",
-		"grunt-contrib-copy": "*",
-		"grunt-contrib-less": "*",
-		"grunt-contrib-cssmin": "*"
+		"grunt-contrib-htmlmin": "0.3.0",
+		"grunt-contrib-imagemin": "0.8.1",
+		"grunt-contrib-clean": "0.6.0",
+		"grunt-contrib-copy": "0.5.0",
+		"grunt-contrib-less": "0.11.4",
+		"grunt-contrib-cssmin": "0.10.0"
 	}
 }
