--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -34,9 +34,14 @@ http {
 
     server {
         listen       80;
+        server_name  _;
         server_name  localhost;
 
         charset utf-8;
+
+if ($host ~* "\d+\.\d+\.\d+\.\d+") {
+  return 400;
+}
 
         #access_log  logs/host.access.log  main;
 
