--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -36,11 +36,16 @@ http {
         listen       80;
         server_name  _;
         server_name  localhost;
+        server_name  foreworld.net;
 
         charset utf-8;
 
 if ($host ~* "\d+\.\d+\.\d+\.\d+") {
-  return 400;
+#  return 400;
+}
+
+if ($host != 'www.foreworld.net') {
+#  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
 }
 
         #access_log  logs/host.access.log  main;
