--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -33,7 +33,7 @@ http {
     gzip  on;
 
     server {
-        listen       80;
+        listen       80 default;
         server_name  _;
         server_name  localhost;
         server_name  foreworld.net;
