--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -32,6 +32,10 @@ http {
 
     gzip  on;
 
+upstream foreworld {
+  server  127.0.0.1:3011;
+}
+
     server {
         listen       80 default;
         server_name  _;
@@ -50,6 +54,10 @@ if ($host != 'www.foreworld.net') {
 
         #access_log  logs/host.access.log  main;
 
+location = /favicon.ico {
+  log_not_found  off;
+}
+
 location /js/ {
   add_header            Access-Control-Allow-Origin *;
   autoindex             on;   #开启目录浏览功能
@@ -60,12 +68,22 @@ location /js/ {
 }
 
 location / {
-  proxy_pass  http://127.0.0.1:3011;
+  proxy_pass  http://foreworld;
+
+  proxy_set_header       X-Real-IP $remote_addr;
+  proxy_connect_timeout  1;
+  proxy_read_timeout     1;
+  proxy_send_timeout     1;
   #root       html;
   #index      index.html index.htm;
 }
 
-        #error_page  404              /404.html;
+        error_page  404 =200 /404.html;
+        location = /404.html {
+          root   html;
+          allow  all;
+        }
+
 
         # redirect server error pages to the static page /50x.html
         #
