--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -76,6 +76,9 @@ location / {
   proxy_send_timeout     1;
   #root       html;
   #index      index.html index.htm;
+
+  proxy_intercept_errors on;
+  proxy_redirect         default;
 }
 
         error_page  404 =200 /404.html;
