--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -64,6 +64,7 @@ location /js/ {
   autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
   autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
   alias                 /root/my/github/new-js/;
+  expires 30d;
   #allow all;
 }
 
