--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -45,11 +45,11 @@ upstream foreworld {
         charset utf-8;
 
 if ($host ~* "\d+\.\d+\.\d+\.\d+") {
-#  return 400;
+  return 400;
 }
 
 if ($host != 'www.foreworld.net') {
-#  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
+  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
 }
 
         #access_log  logs/host.access.log  main;
@@ -69,7 +69,7 @@ location /js/ {
 }
 
 location / {
-  proxy_pass  http://foreworld;
+  proxy_pass  http://foreworld/;
 
   proxy_set_header       X-Real-IP $remote_addr;
   proxy_connect_timeout  1;
