--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -44,13 +44,13 @@ upstream foreworld {
 
         charset utf-8;
 
-if ($host ~* "\d+\.\d+\.\d+\.\d+") {
-  return 400;
-}
+#if ($host ~* '\d+\.\d+\.\d+\.\d+') {
+#  return 400;
+#}
 
-if ($host != 'www.foreworld.net') {
-  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
-}
+#if ($host != 'www.foreworld.net') {
+#  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
+#}
 
         #access_log  logs/host.access.log  main;
 
