--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -43,15 +43,11 @@ upstream foreworld {
         server_name  localhost;
         server_name  foreworld.net;
 
-        charset utf-8;
+        #charset utf-8;
 
-#if ($host ~* '\d+\.\d+\.\d+\.\d+') {
-#  return 400;
-#}
+if ($host ~* '\d+\.\d+\.\d+\.\d+') { return 400; }
 
-#if ($host != 'www.foreworld.net') {
-#  rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent;
-#}
+if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent; }
 
         #access_log  logs/host.access.log  main;
 
