--- a/blog/package.json
+++ b/blog/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "3.5.0",
     "ejs": "1.0.0",
-    "mysql": "2.5.3",
     "mongodb": "1.4.20",
     "mongoose": "3.8.19",
     "velocityjs": "0.4.6",
@@ -18,6 +17,7 @@
     "node-uuid": "1.4.1",
     "async": "0.9.0",
     "log4js": "0.6.21",
+    "speedt-utils": "0.1.11",
     "eventproxy": "0.3.1"
   }
 }
