--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -37,6 +37,10 @@ upstream foreworld {
   server  127.0.0.1:3011;
 }
 
+upstream fileServ {
+  server  127.0.0.1:3021;
+}
+
     server {
         listen       80 default;
         server_name  _;
@@ -63,6 +67,20 @@ location /js/ {
   alias                 /root/my/github/new-js/;
   expires 30d;
   #allow all;
+}
+
+location /fileServ/ {
+  proxy_pass  http://fileServ/;
+
+  proxy_set_header       X-Real-IP $remote_addr;
+  proxy_connect_timeout  1;
+  proxy_read_timeout     1;
+  proxy_send_timeout     1;
+  #root       html;
+  #index      index.html index.htm;
+
+  proxy_intercept_errors on;
+  proxy_redirect         default;
 }
 
 location / {
