--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -61,6 +61,8 @@ location = /favicon.ico {
 
 location /js/ {
   add_header            Access-Control-Allow-Origin *;
+  add_header            'Access-Control-Allow-Credentials' 'true';
+  add_header            'Access-Control-Allow-Methods' 'GET';
   autoindex             on;   #开启目录浏览功能
   autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
   autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
