--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -73,6 +73,16 @@ location /js/ {
   #allow all;
 }
 
+location /app/ {
+  add_header            Access-Control-Allow-Origin *;
+  autoindex             on;   #开启目录浏览功能
+  autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
+  autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
+  alias                 /root/my/github/3203317/app/;
+  expires 30d;
+  #allow all;
+}
+
 location /fileServ/ {
   proxy_pass  http://fileServ/;
 
