--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -45,13 +45,13 @@ upstream fileServ {
         listen       80 default;
         server_name  _;
         server_name  localhost;
-        server_name  foreworld.net;
+        server_name  *.foreworld.net;
 
         #charset utf-8;
 
 if ($host ~* '\d+\.\d+\.\d+\.\d+') { return 400; }
 
-if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent; }
+if ($host = 'foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent; }
 
         #access_log  logs/host.access.log  main;
 
