--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -45,13 +45,13 @@ upstream fileServ {
         listen       80 default;
         server_name  _;
         server_name  localhost;
-        server_name  *.foreworld.net;
+        server_name  foreworld.net;
 
         #charset utf-8;
 
 if ($host ~* '\d+\.\d+\.\d+\.\d+') { return 400; }
 
-if ($host = 'foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent; }
+if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 permanent; }
 
         #access_log  logs/host.access.log  main;
 
@@ -81,20 +81,6 @@ location /app/ {
   alias                 /root/my/github/3203317/app/;
   expires 30d;
   #allow all;
-}
-
-location /fileServ/ {
-  proxy_pass  http://fileServ/;
-
-  proxy_set_header       X-Real-IP $remote_addr;
-  proxy_connect_timeout  1;
-  proxy_read_timeout     1;
-  proxy_send_timeout     1;
-  #root       html;
-  #index      index.html index.htm;
-
-  proxy_intercept_errors on;
-  proxy_redirect         default;
 }
 
 location / {
@@ -185,4 +171,44 @@ location / {
     #    }
     #}
 
+
+    server {
+        listen       80;
+        server_name  file.foreworld.net;
+
+        #charset utf-8;
+
+        #access_log  logs/host.access.log  main;
+
+location = /favicon.ico {
+  log_not_found  off;
+}
+
+location / {
+  proxy_pass  http://fileServ/;
+
+  proxy_set_header       X-Real-IP $remote_addr;
+  proxy_connect_timeout  1;
+  proxy_read_timeout     1;
+  proxy_send_timeout     1;
+  #root       html;
+  #index      index.html index.htm;
+
+  proxy_intercept_errors on;
+  proxy_redirect         default;
+}
+
+        error_page  404 =200 /404.html;
+        location = /404.html {
+          root   html;
+          allow  all;
+        }
+
+        # redirect server error pages to the static page /50x.html
+        #
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
 }
