--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -43,8 +43,7 @@ upstream fileServ {
 
     server {
         listen       80 default;
-        server_name  _;
-        server_name  localhost;
+        #server_name  _;
         server_name  foreworld.net;
 
         #charset utf-8;
@@ -60,7 +59,7 @@ location = /favicon.ico {
 }
 
 location /crossdomain.xml {
-  alias /root/my/github/nana/asset/crossdomain.xml;
+  alias /root/my/git/3203317/nana/asset/crossdomain.xml;
 }
 
 location /js/ {
@@ -68,17 +67,17 @@ location /js/ {
   autoindex             on;   #开启目录浏览功能
   autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
   autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
-  alias                 /root/my/github/new-js/;
+  alias                 /root/my/git/3203317/new-js/;
   expires 30d;
   #allow all;
 }
 
-location /app/ {
+location /download/ {
   add_header            Access-Control-Allow-Origin *;
   autoindex             on;   #开启目录浏览功能
   autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
   autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
-  alias                 /root/my/github/3203317/app/;
+  alias                 /root/my/download/;
   expires 30d;
   #allow all;
 }
@@ -86,7 +85,10 @@ location /app/ {
 location / {
   proxy_pass  http://foreworld/;
 
-  proxy_set_header       X-Real-IP $remote_addr;
+  proxy_set_header       Host             $host;
+  proxy_set_header       X-Real-IP        $remote_addr;
+  proxy_set_header       X-Forwarded-For  $proxy_add_x_forwarded_for;
+
   proxy_connect_timeout  10;
   proxy_read_timeout     10;
   proxy_send_timeout     10;
@@ -189,7 +191,7 @@ location /asset/public/ {
   autoindex             on;   #开启目录浏览功能
   autoindex_exact_size  off;  #关闭详细文件大小统计，让文件大小显示MB，GB单位，默认为b
   autoindex_localtime   on;   #开启以服务器本地时区显示文件修改日期
-  alias                 /root/my/github/3203317/fileServ/asset/public/;
+  alias                 /root/my/git/3203317/fileServ/asset/public/;
   expires 30d;
   #allow all;
 }
