--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -54,6 +54,16 @@ if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 
 
         #access_log  logs/host.access.log  main;
 
+
+location ~* ^/hello_lua(/.*) {
+  lua_code_cache  off;
+  default_type    'text/plain';
+  #content_by_lua  'ngx.say("hello, lua!")';
+  content_by_lua_file  '/root/my/git/3203317/nana/asset/hello.lua';
+}
+
+
+
 location = /favicon.ico {
   log_not_found  off;
 }
