--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -57,7 +57,10 @@ if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 
 
 location ~* ^/hello_lua(/.*) {
   lua_code_cache  off;
+
+  add_header      Content-Type 'application/json; charset=utf-8';
   default_type    'application/json';
+
   #default_type    'text/plain';
   #content_by_lua  'ngx.say("hello, lua!")';
   content_by_lua_file  '/root/my/git/3203317/nana/asset/hello.lua';
