--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -19,6 +19,10 @@ http {
     include       /usr/local/nginx/conf/mime.types;
     default_type  application/octet-stream;
 
+
+lua_package_path  '/root/my/git/3203317/nana/asset/lib/?.lua;;';
+
+
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
