--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -21,7 +21,7 @@ http {
 
 
 lua_package_path  '/root/my/git/3203317/nana/asset/lib/?.lua;;';
-
+init_by_lua_file  '/root/my/git/3203317/nana/asset/init.lua';
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
