--- a/asset/foreworld.conf
+++ b/asset/foreworld.conf
@@ -59,7 +59,7 @@ if ($host != 'www.foreworld.net') { rewrite ^/(.*)$ http://www.foreworld.net/$1 
         #access_log  logs/host.access.log  main;
 
 
-location ~* ^/hello_lua(/.*) {
+location ~* ^/api(/.*) {
   lua_code_cache  off;
 
   add_header      Content-Type 'application/json; charset=utf-8';
