--- a/asset/20190426/production.conf
+++ b/asset/20190426/production.conf
@@ -60,6 +60,8 @@ server {
         #ssl  on;
         ssl_certificate  /root/my/nginx/cert/a.pem;
         ssl_certificate_key  /root/my/nginx/cert/a.key;
+
+        ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
         ssl_ciphers  ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
         ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
